[gd_scene load_steps=17 format=3 uid="uid://cqxxrjqqqi565"]

[ext_resource type="Script" uid="uid://dv4blyo2v1bd8" path="res://stages/title_screen/title_screen_manager.gd" id="1_yctb5"]
[ext_resource type="PackedScene" uid="uid://1npoa32dabp" path="res://particles/screen_star.tscn" id="2_681iy"]
[ext_resource type="Texture2D" uid="uid://c6pqmg0ubah61" path="res://assets/texture/ui/title_screen/blackhole.png" id="3_60mme"]
[ext_resource type="Shader" uid="uid://n4chem2otws2" path="res://shaders/entity_shader.gdshader" id="4_pjo5j"]
[ext_resource type="Texture2D" uid="uid://l2qk3nei5leu" path="res://assets/texture/ui/title_screen/title.png" id="5_5mxqx"]
[ext_resource type="PackedScene" uid="uid://cqya263f3hkcs" path="res://particles/fire_particles.tscn" id="6_681iy"]
[ext_resource type="Texture2D" uid="uid://d0y522yhs4hvm" path="res://assets/texture/ui/title_screen/button/start.png" id="6_tsp1v"]
[ext_resource type="Texture2D" uid="uid://breopg5d7ob7u" path="res://assets/texture/ui/title_screen/button/start_hover.png" id="7_3aitq"]
[ext_resource type="Texture2D" uid="uid://bhlqtkxm0nxvj" path="res://assets/texture/ui/title_screen/button/option.png" id="8_igvpv"]
[ext_resource type="Texture2D" uid="uid://b6wp88jet4l56" path="res://assets/texture/ui/title_screen/button/option_hover.png" id="9_lwj2x"]
[ext_resource type="Texture2D" uid="uid://ckiy0hico2p8u" path="res://assets/texture/ui/title_screen/button/quit.png" id="10_rf16a"]
[ext_resource type="Texture2D" uid="uid://53uui4v7u5bp" path="res://assets/texture/ui/title_screen/button/quit_hover.png" id="11_gn4uv"]

[sub_resource type="Animation" id="Animation_yctb5"]
resource_name = "title_screen_anim"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8, 2.1, 2.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title/Blackhole:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title/Title:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(220, -0.25, 0, 1.03333, -2, 95, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.8, 1.8)
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.26667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_setup_button"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Title/Title/FireParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_681iy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/Title/FireParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_60mme"]
_data = {
&"RESET": SubResource("Animation_681iy"),
&"title_screen_anim": SubResource("Animation_yctb5")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xqn56"]
shader = ExtResource("4_pjo5j")
shader_parameter/outline_enabled = true
shader_parameter/outline_color = Color(1, 0, 0, 1)
shader_parameter/outline_size = 1.0
shader_parameter/alpha_threshold = 0.0
shader_parameter/outline_samples = 4
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_strength = 0.0

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_yctb5")

[node name="Star" parent="." instance=ExtResource("2_681iy")]
preprocess = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_60mme")
}
autoplay = "title_screen_anim"

[node name="Title" type="Node2D" parent="."]

[node name="Blackhole" type="Sprite2D" parent="Title"]
modulate = Color(1, 1, 1, 0)
position = Vector2(90, 100)
texture = ExtResource("3_60mme")

[node name="Title" type="Sprite2D" parent="Title"]
material = SubResource("ShaderMaterial_xqn56")
position = Vector2(220, 110)
texture = ExtResource("5_5mxqx")
offset = Vector2(16, 9)

[node name="FireParticles" parent="Title/Title" instance=ExtResource("6_681iy")]
position = Vector2(38, -3)

[node name="Buttons" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartButton" type="TextureButton" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 60.0
offset_top = 180.0
offset_right = 200.0
offset_bottom = 205.0
disabled = true
texture_normal = ExtResource("6_tsp1v")
texture_hover = ExtResource("7_3aitq")

[node name="OptionsButton" type="TextureButton" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 80.0
offset_top = 210.0
offset_right = 220.0
offset_bottom = 235.0
disabled = true
texture_normal = ExtResource("8_igvpv")
texture_hover = ExtResource("9_lwj2x")

[node name="QuitButton" type="TextureButton" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 240.0
offset_right = 240.0
offset_bottom = 265.0
disabled = true
texture_normal = ExtResource("10_rf16a")
texture_hover = ExtResource("11_gn4uv")

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
